# PrivFusion

./: .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ci.yml  pyproject.toml
configs/: README.md  experiment_1.yaml  experiment_2.yaml
notebooks/: 01-getting-started.ipynb  02-generate-data.ipynb  03-synth-data-metrics.ipynb
src/privfusion/: consolidater.py  data_models.py  dataset_analyzer.py
src/privfusion/agents/: agent_cluster.py  agent_code.py  agent_norm.py  llms.py
src/privfusion/metrics/: metrics_fidelity.py  metrics_privacy.py  metrics_statistics.py
src/privfusion/tabular_data/: __init__.py  utils.py
src/privfusion/tabular_data/templates/: adult_generation.yaml  covid_generation_indonesia.yaml  covid_generation_oxford.yaml
src/privfusion/utils/: __init__.py  type_classification.py  utils.py
tests/: test_agents.py  test_common.py  test_consolidator.py  test_dataset_analyzer_edge_cases.py  test_dataset_extraction.py  test_integration.py  test_mapping.py  test_utils.py
